[UPDATE] - Landing Page
Update Landing Page with few informations

--- a/index.html
+++ b/index.html
@@ -7,5 +7,35 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Alexis — Développeur Jeux Vidéo</h1>
+    <p>Passionné Unity | C# | Création de jeux</p>
+  </header>
+
+  <section id="projects">
+    <h2>Mes projets</h2>
+    <div class="project-card">
+      <h3>Nom du Jeu</h3>
+      <img src="assets/game.gif" alt="Gameplays" />
+      <p>Petit descriptif du jeu.</p>
+      <!-- <a href="builds/monjeu.zip" download>Télécharger le build</a> -->
+      <!-- <a href="https://github.com/code" target="_blank">Voir le code</a> -->
+    </div>
+    <!-- Ajoute plus de projets ici -->
+  </section>
+
+  <section id="about">
+    <h2>À propos</h2>
+    <p>Étudiant à Epitech, passionné par le développement de jeux vidéo en Unity.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email : alexis.arduca@epitech.eu</p>
+    <p>GitHub : <a href="https://github.com/Alexis-Arduca" target="_blank"></a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/alexis-arduca-2166a0235/" target="_blank"></a></p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
