[UPDATE] - Fix Navbar URL

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,14 +10,7 @@
 </head>
 <body>
   <header id="navbar-container">
-    <nav class="navbar">
-      <ul class="navbar-list">
-        <li><a href="../index.html" data-lang-key="navAccueil">Accueil</a></li>
-        <li><a href="../pages/projects.html" data-lang-key="navProjects">Mes Projets</a></li>
-        <li><a href="../pages/about.html" data-lang-key="navAbout">À propos</a></li>
-        <li><a href="../pages/contact.html" data-lang-key="navContact">Contact</a></li>
-      </ul>
-    </nav>
+    <nav class="navbar"></nav>
   </header>
 
   <main>
