[UPDATE] - Landing and Projects pages
Add featured project part on landing page to a better landing page. Add gif presentation for Chasing Echoes Project

--- a/index.html
+++ b/index.html
@@ -21,26 +21,45 @@
         <span data-lang-key="heroTitleName">Alexis</span>
         <span data-lang-key="heroTitlePortfolio">Portfolio</span>
       </h1>
-      <p class="hero-tagline fade-in" data-lang-key="heroTagline">Création de mondes immersifs avec Unity & C#</p>
+      <p class="hero-tagline fade-in" data-lang-key="heroTagline">Étudiant en développement passionné de jeux vidéo, avec une expérience variée en langages et technologies.</p>
+      <p class="featured-main-title fade-in" data-lang-key="heroTagline">Projet en vedette :</p>
+      <div class="featured-card fade-in">
+        <div class="featured-container">
+          <div class="featured-poster">
+            <img src="assets/projects/little_monsters/Poster.jpg" alt="Little Monsters Project Poster" />
+          </div>
+          <div class="featured-content">
+            <h2 class="featured-title" data-lang-key="featuredTitle">Little Monsters</h2>
+            <p class="featured-description" data-lang-key="featuredDescription">
+              Projet développé sur Unity par un groupe de 6 personnes durant mon année à Saxion University of Applied Sciences, aux Pays-Bas, dans le cadre du module Project Show-Off.
+            </p>
+            <p class="featured-description" data-lang-key="featuredDescription">
+              L'objectif était de concevoir un jeu 3D destiné aux enfants, valorisant les monstres qu'ils ont dessinés tout en respectant les contraintes du client.  
+            </p>
+            <a href="pages/projects.html" class="btn primary" aria-label="Découvrir le projet Little Monsters">Découvrir le projet</a>
+          </div>
+        </div>
+      </div>
       <div class="hero-cta fade-in">
         <a href="pages/projects.html" class="btn primary">Voir mes projets</a>
         <a href="pages/contact.html" class="btn secondary">Me contacter</a>
+        <a href="pages/contact.html" class="btn primary">En savoir plus</a>
       </div>
       <div class="hero-about fade-in" data-lang-array="heroAbout">
-        <p>Salut, je suis Alexis, un développeur de jeux vidéo passionné, spécialisé dans Unity et C#.</p>
-        <p>Inspiré par des titres comme <b>The Legend of Zelda</b>, j'aime concevoir des mécaniques captivantes et des expériences immersives pour mes projets personnels. Découvrez mes projets !</p>
+        <p>Salut, je suis Alexis, étudiant à Epitech en 5ème année, passionné par le développement de jeu vidéo.</p>
+        <p>Inspiré par des titres comme <b>The Legend of Zelda</b>, j'aime concevoir des mécaniques captivantes et des expériences immersives pour mes projets personnels et en groupe. Découvrez mes projets !</p>
       </div>
       <div class="hero-stats fade-in">
         <div class="stat">
-          <span class="stat-number" data-lang-key="statExperience">3+</span>
-          <span class="stat-label" data-lang-key="statExperienceLabel">Années d'expérience</span>
+          <span class="stat-number" data-lang-key="statExperience">4+</span>
+          <span class="stat-label" data-lang-key="statExperienceLabel">Années d'études</span>
         </div>
         <div class="stat">
-          <span class="stat-number" data-lang-key="statProjects">10+</span>
-          <span class="stat-label" data-lang-key="statProjectsLabel">Projets réalisés</span>
+          <span class="stat-number" data-lang-key="statProjects">20+</span>
+          <span class="stat-label" data-lang-key="statProjectsLabel">Projets réalisés (solo et groupe)</span>
         </div>
         <div class="stat">
-          <span class="stat-number" data-lang-key="statSkills">Unity & C#</span>
+          <span class="stat-number" data-lang-key="statSkills">Unity</span>
           <span class="stat-label" data-lang-key="statSkillsLabel">Compétences principales</span>
         </div>
       </div>
