--- a/pages/projects.html
+++ b/pages/projects.html
@@ -74,6 +74,10 @@
       </div>
       <div class="project-details">
         <h3 data-lang-key="project1Title">Chasing Echoes</h3>
+        <div class="gif-frame">
+            <img src="../assets/projects/chasing_echoes/color_link.gif" alt="color-link-gif" />
+            <img src="../assets/projects/chasing_echoes/path_game.gif" alt="path-game-gif" />
+        </div>
         <div class="project-description" data-lang-array="project1Description">
             <p>Moteur: Unity</p>
             <p>Ce jeu a été réalisé dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
