[UPDATE] - Mobile issue
Fix mobile issue (navbar, video presentation) and other things

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="stat">
           <span class="stat-number" data-lang-key="statSkills">Unity</span>
-          <span class="stat-label" data-lang-key="statSkillsLabel">Compétences principales</span>
+          <span class="stat-label" data-lang-key="statSkillsLabel">Compétence principale</span>
         </div>
       </div>
     </div>
