--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Alexis</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWixZiV8g8V1Nk6sZe4H1gP4n2J2gMxe5Y/jY6W0QbG7v/s5f7z7L3oZ7v7w7v7w7v7w7v7w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
