--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mes Projets — Alexis</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../components/navbar/navbar.css" />
@@ -17,13 +18,15 @@
     <!-- Little Monsters Card -->
     <div class="project-card">
       <div class="project-media">
-        <img src="../assets/projects/little_monsters/Poster.jpg" alt="Poster Little Monsters" width="300" />
+        <img src="../assets/projects/little_monsters/Poster.jpg" alt="Poster Little Monsters"/>
         <p>By: Mark Hoffman</p>
       </div>
       <div class="project-details">
         <h3 data-lang-key="project1Title">Little Monsters</h3>
-        <img src="../assets/projects/little_monsters/item_give.gif" alt="item-gif" width="355" />
-        <img src="../assets/projects/little_monsters/monsters.gif" alt="monsters-gif" width="355" />
+        <div class="gif-frame">
+          <img src="../assets/projects/little_monsters/item_give.gif" alt="item-gif" />
+          <img src="../assets/projects/little_monsters/monsters.gif" alt="monsters-gif" />
+        </div>
         <div class="project-description" data-lang-array="project1Description">
           <p>Moteur: Unity</p>
           <p>Ce jeu a été réalisé dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
