[UPDATE] - Landing, About and Project Pages
Some fix made by response from friend who look at my Portfolio

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <span data-lang-key="heroTitlePortfolio">Portfolio</span>
       </h1>
       <p class="hero-tagline fade-in" data-lang-key="heroTagline">Étudiant en développement passionné de jeux vidéo, avec une expérience variée en langages et technologies.</p>
+      <div class="hero-about fade-in" data-lang-array="heroAbout">
+        <p>Je suis Alexis, étudiant à Epitech en 5ème année, passionné par le développement de jeu vidéo.</p>
+        <p>Inspiré par des titres comme <b>The Legend of Zelda</b>, j'aime concevoir des mécaniques captivantes et des expériences immersives pour mes projets personnels et en groupe. Découvrez mes projets !</p>
+      </div>
       <p class="featured-main-title fade-in" data-lang-key="heroTagline">Projet en vedette :</p>
       <div class="featured-card fade-in">
         <div class="featured-container">
@@ -43,11 +47,7 @@
       <div class="hero-cta fade-in">
         <a href="pages/projects.html" class="btn primary">Voir mes projets</a>
         <a href="pages/contact.html" class="btn secondary">Me contacter</a>
-        <a href="pages/contact.html" class="btn primary">En savoir plus</a>
-      </div>
-      <div class="hero-about fade-in" data-lang-array="heroAbout">
-        <p>Salut, je suis Alexis, étudiant à Epitech en 5ème année, passionné par le développement de jeu vidéo.</p>
-        <p>Inspiré par des titres comme <b>The Legend of Zelda</b>, j'aime concevoir des mécaniques captivantes et des expériences immersives pour mes projets personnels et en groupe. Découvrez mes projets !</p>
+        <a href="pages/about.html" class="btn primary">En savoir plus</a>
       </div>
       <div class="hero-stats fade-in">
         <div class="stat">
