--- a/pages/about.html
+++ b/pages/about.html
@@ -59,16 +59,16 @@
       <h2>Mes Qualités</h2>
       <div class="section-content qualities-grid">
         <div class="quality-card">
-          <h3>Créativité</h3>
-          <p>Passionné par l'univers de The Legend of Zelda, j'aime recréer les mécaniques de ces jeux qui m'inspirent.</p>
-        </div>
-        <div class="quality-card">
           <h3>Passion</h3>
           <p>Les jeux vidéos m'ont toujours passionné. Pouvoir travailler dans le développement de ces derniers est très plaisant.</p>
         </div>
         <div class="quality-card">
           <h3>Esprit d'équipe</h3>
           <p>Mon expérience à l'international m'a appris à collaborer efficacement avec des profils variés.</p>
+        </div>
+        <div class="quality-card">
+          <h3>Lead technique</h3>
+          <p>Référent sur les choix techniques des projet, je validais la faisabilité et coordonnais leur intégration dans le jeu.</p>
         </div>
       </div>
     </section>
@@ -84,8 +84,8 @@
     <section class="about-section internship-section">
     <h2>Recherche de Stage</h2>
     <div class="section-content">
-        <p>Actuellement en 5e année à Epitech, je suis à la recherche d'un stage à temps partiel ainsi que d'un stage à temps plein. Voici les détails :</p>
-        <div class="internship-grid">
+      <p>Actuellement en 5e année à Epitech, je suis à la recherche d'un stage à temps partiel ainsi que d'un stage à temps plein. Voici les détails :</p>
+      <div class="internship-grid">
         <div class="internship-card">
             <h3>Stage à temps partiel</h3>
             <p>Stage à temps partiel d'une durée de 6 mois de Septembre 2025 à Février 2026, 3 jours par semaine</p>
@@ -94,8 +94,10 @@
             <h3>Stage à temps plein</h3>
             <p>Stage de fin d'étude à temps plein, d'une durée de 6 mois de Mars à Août 2026.</p>
         </div>
-        </div>
+      </div>
+      <div class="cta-button-wrapper">
         <a href="../pages/contact.html" class="cta-button">Me contacter pour une opportunité</a>
+      </div>
     </div>
     </section>
   </main>
