--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,8 +28,7 @@
           <img src="../assets/projects/little_monsters/monsters.gif" alt="monsters-gif" />
         </div>
         <div class="project-description" data-lang-array="project1Description">
-          <p>Moteur: Unity</p>
-          <p>Ce jeu a été réalisé dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
+          <p>Ce jeu a été réalisé avec le moteur Unity dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
           <p>J'ai travaillé aux côtés de game designers et artistes 2D/3D pour créer un jeu destiné à un jeune public, en m'appuyant sur des créatures imaginées par des enfants dans une école partenaire.</p>
           <p>L'objectif était de concevoir un jeu amusant et accessible, fidèle à l'univers inventé par les enfants, tout en proposant une expérience ludique et cohérente.</p>
           <p>En tant que développeur Unity, j'ai assuré la programmation du gameplay, l'intégration des animations des monstres 3D ainsi que leur ia, la mise en place des interactions avec le monde et l'apparition aléatoire des monstres dans leurs biomes respectifs. Ce projet m'a permis de développer mes compétences en travail en équipe interdisciplinaire et en adaptation à une cible spécifique.</p>
@@ -55,8 +54,7 @@
         </div>
 
         <div class="project-description" data-lang-array="project1Description">
-            <p>Moteur: Unity</p>
-            <p>Ce jeu a été réalisé dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
+            <p>Ce jeu a été réalisé avec le moteur Unity dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
             <p>J'ai collaboré avec des game designers et des artistes pour développer un jeu multijoueur (3 joueurs) utilisant les fonctionnalités de la caméra et du gyroscope des appareils mobiles, avec un PC comme hôte.</p>
             <p>L'objectif était de créer une expérience amusante et créative où chaque joueur, muni de son téléphone, reçoit un thème et une partie du corps (tête, corps, jambes) à dessiner simultanément via la caméra du téléphone pendant un temps limité. Le PC héberge la partie et affiche le rendu final en combinant les dessins pour former une créature unique, mettant l'accent sur le plaisir et la créativité sans compétition. De plus, le jeu propose un mode dessin dans le lobby, où les joueurs utilisent le gyroscope du téléphone pour dessiner à l'aide d'une boule en attendant que tous les joueurs rejoignent la partie.</p>
             <p>En tant que développeur Unity, j'ai implémenté la mécanique de dessin via le téléphone, la synchronisation multijoueur entre les appareils mobiles et le PC, ainsi que l'assemblage des dessins en temps réel sur l'hôte. Ce projet m'a permis de renforcer mes compétences en programmation mobile, en gestion de fonctionnalités réseau et capteurs, et en travail d'équipe interdisciplinaire.</p> 
@@ -82,8 +80,7 @@
             <img src="../assets/projects/chasing_echoes/path_game.gif" alt="path-game-gif" />
         </div>
         <div class="project-description" data-lang-array="project1Description">
-            <p>Moteur: Unity</p>
-            <p>Ce jeu a été réalisé dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
+            <p>Ce jeu a été réalisé avec le moteur Unity dans le cadre d'un projet de groupe à Saxion University of Applied Sciences, aux Pays-Bas.</p>
             <p>Le but de notre projet était de sensibiliser à la prévention des feux de forêt à travers une expérience interactive engageante.</p>
             <p>Le joueur incarne un employé d'une tour de guet forestière, chargé de surveiller les environs en période de crise. Des appels de détresse proviennent de personnes perdues dans la forêt, menacées par un incendie en progression. Le joueur doit répondre à ces appels et aider les survivants en leur fournissant des instructions, à travers des mini-jeux variés.</p>
             <p>L'objectif principal est de sauver le plus de personnes possible avant que le feu ne se propage trop largement ou que trop de personne succombe à ce dernier, tout en gérant la pression du temps et la complexité croissante des demandes.</p>
