[UPDATE] - Landing & About pages
Add stage research on landing page. Add a "Journey" part on about page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,37 +22,58 @@
       </div>
     </section>
 
-    <section class="about-section qualities-section">
-      <h2>Mes Compétences</h2>
-        <div class="section-content">
-          <p>Étudiant à Epitech depuis bientôt cinq ans, j'ai acquis de nombreuses compétences dans divers langages et outils de programmation.</p>
-          <div class="skills-grid">
-            <div class="skill-card">
-              <h3>C</h3>
-              <p>Programmation bas niveau et gestion de la mémoire pour des projets performants.</p>
-            </div>
-            <div class="skill-card">
-              <h3>C++</h3>
-              <p>Développement de logiciels performants et gestion avancée des ressources pour des applications complexes.</p>
-            </div>
-            <div class="skill-card">
-              <h3>C#</h3>
-              <p>Développement d'applications et de mécaniques de jeu avec Unity.</p>
-            </div>
-            <div class="skill-card">
-              <h3>Unity</h3>
-              <p>Création de jeux vidéo immersifs et de prototypes interactifs.</p>
-            </div>
-            <div class="skill-card">
-              <h3>Docker</h3>
-              <p>Conteneurisation d'applications pour un déploiement efficace et une gestion simplifiée des environnements.</p>
-            </div>
-            <div class="skill-card">
-              <h3>Python</h3>
-              <p>Scripting, automatisation et développement d'applications polyvalentes.</p>
-            </div>
+    <section class="about-section journey-section">
+      <h2>Mon Parcours</h2>
+      <div class="section-content">
+        <p>Voici un aperçu de mon parcours académique et professionnel, qui m'a permis de développer mes compétences en développement dans différents domaines, contextes et langages :</p>
+        <div class="journey-grid">
+          <div class="journey-card">
+            <h3>Epitech Montpellier (2021 - Présent)</h3>
+            <p>Étudiant en 4ème année à Epitech Montpellier, j'ai rejoint cette école pour acquérir une solide formation en développement logiciel. J'ai participé à divers projets, individuels et en groupe, en utilisant des langages comme C, C++, Python et bien d'autres, renforçant mes compétences techniques.</p>
+          </div>
+          <div class="journey-card">
+            <h3>Saxion University, Pays-Bas (2024 - 2025)</h3>
+            <p>Lors de ma 4ème année à Epitech, j'ai effectué un échange international à Saxion University (Pays-Bas), axé sur le développement de jeux vidéo avec Unity. J'ai collaboré à des projets de groupe au sein d'équipes multiculturelles, renforçant mes compétences en conception de jeux et en travail d'équipe.</p>
+          </div>
+          <div class="journey-card">
+            <h3>Stage chez Odigo (Juillet 2022 - Décembre 2022)</h3>
+            <p>En fin de 1ère année à Epitech, j'ai effectué un stage chez Odigo Baillargues en tant que développeur full stack. En collaboration avec un collègue d'Odigo basé à l'étranger, j'ai développé un site web facilitant le suivi des projets de l'équipe, renforçant mes compétences en développement front-end et back-end.</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="about-section qualities-section">
+      <h2>Mes Compétences</h2>
+      <div class="section-content">
+        <p>Étudiant à Epitech depuis bientôt cinq ans, j'ai acquis de nombreuses compétences dans divers langages et outils de programmation.</p>
+        <div class="skills-grid">
+          <div class="skill-card">
+            <h3>C</h3>
+            <p>Programmation bas niveau et gestion de la mémoire pour des projets performants.</p>
+          </div>
+          <div class="skill-card">
+            <h3>C++</h3>
+            <p>Développement de logiciels performants et gestion avancée des ressources pour des applications complexes.</p>
+          </div>
+          <div class="skill-card">
+            <h3>C#</h3>
+            <p>Développement d'applications et de mécaniques de jeu avec Unity.</p>
+          </div>
+          <div class="skill-card">
+            <h3>Unity</h3>
+            <p>Création de jeux vidéo immersifs et de prototypes interactifs.</p>
+          </div>
+          <div class="skill-card">
+            <h3>Docker</h3>
+            <p>Conteneurisation d'applications pour un déploiement efficace et une gestion simplifiée des environnements.</p>
+          </div>
+          <div class="skill-card">
+            <h3>Python</h3>
+            <p>Scripting, automatisation et développement d'applications polyvalentes.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="about-section qualities-section">
@@ -82,23 +103,23 @@
     </section>
 
     <section class="about-section internship-section">
-    <h2>Recherche de Stage</h2>
-    <div class="section-content">
-      <p>Actuellement en 5e année à Epitech, je suis à la recherche d'un stage à temps partiel ainsi que d'un stage à temps plein. Voici les détails :</p>
-      <div class="internship-grid">
-        <div class="internship-card">
+      <h2>Recherche de Stage</h2>
+      <div class="section-content">
+        <p>Actuellement en 5e année à Epitech, je suis à la recherche d'un stage à temps partiel ainsi que d'un stage à temps plein. Voici les détails :</p>
+        <div class="internship-grid">
+          <div class="internship-card">
             <h3>Stage à temps partiel</h3>
-            <p>Stage à temps partiel d'une durée de 6 mois de Septembre 2025 à Février 2026, 3 jours par semaine</p>
-        </div>
-        <div class="internship-card">
+            <p>Stage à temps partiel d'une durée de 6 mois de Septembre 2025 à Février 2026, 3 jours par semaine.</p>
+          </div>
+          <div class="internship-card">
             <h3>Stage à temps plein</h3>
             <p>Stage de fin d'étude à temps plein, d'une durée de 6 mois de Mars à Août 2026.</p>
+          </div>
+        </div>
+        <div class="cta-button-wrapper">
+          <a href="../pages/contact.html" class="cta-button">Me contacter pour une opportunité</a>
         </div>
       </div>
-      <div class="cta-button-wrapper">
-        <a href="../pages/contact.html" class="cta-button">Me contacter pour une opportunité</a>
-      </div>
-    </div>
     </section>
   </main>
 
