--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
         <span data-lang-key="heroTitlePortfolio">Portfolio</span>
       </h1>
       <p class="hero-tagline fade-in" data-lang-key="heroTagline">Étudiant en développement passionné de jeux vidéo, avec une expérience variée en langages et technologies.</p>
-      <div class="hero-about fade-in" data-lang-array="heroAbout">
-        <p>Je suis Alexis, étudiant à Epitech en 5ème année, passionné par le développement de jeu vidéo.</p>
-        <p>Inspiré par des titres comme <b>The Legend of Zelda</b>, j'aime concevoir des mécaniques captivantes et des expériences immersives pour mes projets personnels et en groupe. Découvrez mes projets !</p>
+
+      <div class="intro-cards fade-in">
+        <div class="intro-card">
+          <h2 class="intro-title" data-lang-key="introWhoAmI">Qui suis-je</h2>
+          <p class="intro-description" data-lang-key="introWhoAmIDescription">
+            Je suis Alexis, étudiant en 5ème année à Epitech, passionné par le développement de jeux vidéo et les technologies innovantes. Découvrez mes compétences !
+          </p>
+          <a href="pages/about.html" class="btn primary" aria-label="En savoir plus sur moi">En savoir plus</a>
+        </div>
+        <div class="intro-card">
+          <h2 class="intro-title" data-lang-key="introInternship">Recherche de stage</h2>
+          <p class="intro-description" data-lang-key="introInternshipDescription">
+            Actuellement à la recherche d'un stage à temps partiel, de Septembre 2025 jusqu'à Février 2026 dans le domaine du développement de jeu vidéo de préférence !
+          </p>
+          <a href="pages/contact.html" class="btn primary" aria-label="Me contacter pour un stage">Me contacter</a>
+        </div>
       </div>
+
       <p class="featured-main-title fade-in" data-lang-key="heroTagline">Projet en vedette :</p>
       <div class="featured-card fade-in">
         <div class="featured-container">
@@ -38,16 +52,11 @@
               Projet développé sur Unity par un groupe de 6 personnes durant mon année à Saxion University of Applied Sciences, aux Pays-Bas, dans le cadre du module Project Show-Off.
             </p>
             <p class="featured-description" data-lang-key="featuredDescription">
-              L'objectif était de concevoir un jeu 3D destiné aux enfants, valorisant les monstres qu'ils ont dessinés tout en respectant les contraintes du client.  
+              L'objectif était de concevoir un jeu 3D destiné aux enfants, valorisant les monstres qu'ils ont dessinés tout en respectant les contraintes du client.
             </p>
             <a href="pages/projects.html" class="btn primary" aria-label="Découvrir le projet Little Monsters">Découvrir le projet</a>
           </div>
         </div>
-      </div>
-      <div class="hero-cta fade-in">
-        <a href="pages/projects.html" class="btn primary">Voir mes projets</a>
-        <a href="pages/contact.html" class="btn secondary">Me contacter</a>
-        <a href="pages/about.html" class="btn primary">En savoir plus</a>
       </div>
       <div class="hero-stats fade-in">
         <div class="stat">
